
Broker:
- Fix memory leak when a plugin modifies the topic of a message in
  MOSQ_EVT_MESSAGE.
- Fix bridge `restart_timeout` not being honoured.
- Fix potential memory leaks if a plugin modifies the message in the
  MOSQ_EVT_MESSAGE event.

Client library:
- Fix threads library detection on Windows under cmake. Bumps the minimum
  cmake version to 3.1, which is still ancient.

Clients:
- Fix mosquitto_pub incorrectly reusing topic aliases when reconnecting.
  Closes #2494.

2.0.14 - 2021-11-17
===================

Broker:
- Fix bridge not respecting receive-maximum when reconnecting with MQTT v5.

Client library:
- Fix mosquitto_topic_matches_sub2() not using the length parameters.
  Closes #2364.
- Fix incorrect subscribe_callback in mosquittopp.h. Closes #2367.


2.0.13 - 2021-10-27
===================

Broker:
- Fix `max_keepalive` option not being able to be set to 0.
- Fix LWT messages not being delivered if `per_listener_settings` was set to
  true. Closes #2314.
- Various fixes around inflight quota management. Closes #2306.
- Fix problem parsing config files with Windows line endings. Closes #2297.
- Don't send retained messages when a shared subscription is made.
- Fix log being truncated in Windows.
- Fix client id not showing in log on failed connections, where possible.
- Fix broker sending duplicate CONNACK on failed MQTT v5 reauthentication.
  Closes #2339.
- Fix mosquitto_plugin.h not including mosquitto_broker.h. Closes #2350.

Client library:
- Initialise sockpairR/W to invalid in `mosquitto_reinitialise()` to avoid
  closing invalid sockets in `mosquitto_destroy()` on error. Closes #2326.

Clients:
- Fix date format in mosquitto_sub output. Closes #2353.


2.0.12 - 2021-08-31
===================

Security:
- An MQTT v5 client connecting with a large number of user-property properties
  could cause excessive CPU usage, leading to a loss of performance and
  possible denial of service. This has been fixed.